Fix animation jank in theme on iOS6

--- a/src/style/bellows-theme.scss
+++ b/src/style/bellows-theme.scss
@@ -1,8 +1,5 @@
 .bellows {
     box-sizing: border-box;
-    overflow: hidden;
-    
-    border-radius: 5px;
 }
 
 .bellows__header {
@@ -48,12 +45,9 @@
         
         pointer-events: none;
         
-        transition: transform 0.2s ease-in-out;
-        
-        .bellows__item.bellows--is-open > & {
-            transform: rotate(45deg);
-        }
-
+        transition: transform 0.1s ease-in-out;
+                
+        .bellows__item.bellows--is-open > &,
         .bellows__item.bellows--is-opening > & {
             transform: rotate(45deg);
         }
@@ -67,7 +61,10 @@
         border-bottom: 0;
     }
 
-    h3 {
+    h1,
+    h2,
+    h3,
+    h4 {
         margin: 0;
     }
 }
@@ -75,9 +72,7 @@
 .bellows__content {
     padding: 20px;
     border: 1px solid #ecf0f1;
-    
-    box-shadow: inset 0 5px 5px rgba(black, 0.05);
-    
+        
     .bellows {
         margin-top: 20px;
     }
